UI changes bug fix

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ time {
   letter-spacing: 0.25rem;
   background: linear-gradient(
     to right,
-    #FFFFFF,
+    #337AB7,
     #0CA3E1
   );
   font-size: 0.75rem;
