UI changes bug fix

--- a/style.css
+++ b/style.css
@@ -46,8 +46,8 @@ time {
   letter-spacing: 0.25rem;
   background: linear-gradient(
     to right,
-    #337AB7,
-    #0CA3E1
+    #0CA3E1,
+    #337AB7
   );
   font-size: 0.75rem;
 }
